# Scribo

./: .gitignore  README.md  package-lock.json  package.json  tsc_output.txt  tsconfig.json  vite.config.ts
chunker/extract/: index.ts
chunker/latex/: index.ts  (+2 more)
frontend/: settings.ts
src-tauri/: Cargo.toml  calibration_notes.json  calibration_queries.json  scribo_core.db  tauri.conf.json
src-tauri/benches/: chunker_bench.rs
src-tauri/data/: synonyms.json
src-tauri/src/: cli.rs  constants.rs  error.rs  lang.rs  lib.rs  main.rs  schema.rs  utils.rs
src-tauri/src/ai/: mod.rs  parsing.rs  translator.rs  types.rs
src-tauri/src/ai/embedding/: local.rs  mod.rs  ollama.rs  openai.rs  provider.rs  similarity.rs
src-tauri/src/ai/llm/: anthropic.rs  gemini.rs  local.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src-tauri/src/ai/models/: manager.rs  mod.rs  scanner.rs
src-tauri/src/ai/prompts/: distribute.rs  mod.rs  refinery.rs  retrieval.rs  translation.rs
src-tauri/src/chunker/: latex.rs  mod.rs  pipeline.rs  table.rs  types.rs
src-tauri/src/chunker/extract/: extract_yaml.rs  mod.rs  split_by_headings.rs
src-tauri/src/chunker/formatting/: mod.rs  remove_empty_lines.rs  remove_horizontal_rules.rs  remove_links.rs  remove_list_markers.rs  remove_list_numbering.rs  remove_markdown_formatting.rs  strip_heading_markers.rs
src-tauri/src/chunker/latex/: format_latex.rs  mod.rs  remove_latex.rs
src-tauri/src/chunker/pipeline/: assemble.rs  clean.rs  mod.rs  sections.rs  sub_headings.rs  tables.rs
src-tauri/src/chunker/stages/: assemble.rs  clean.rs  formatting.rs  headings.rs  mod.rs  sections.rs  sub_headings.rs  table.rs  table_restore.rs  token.rs
src-tauri/src/chunker/table/: extract_table.rs  linearize_table.rs  mod.rs
src-tauri/src/chunker/token/: count_tokens.rs  mod.rs  split_by_sentence_boundaries.rs  split_by_words.rs  split_oversized_paragraph.rs
src-tauri/src/cli/: distribute.rs  fragment_file.rs  import_dir.rs  query.rs  reindex.rs
src-tauri/src/commands/: ai.rs  cards.rs  chunker.rs  chunks.rs  db.rs  distribute.rs  files.rs  fragmenter.rs  mod.rs  refinery.rs  reviewer.rs  search.rs  tests.rs
src-tauri/src/commands/ai/: mod.rs
src-tauri/src/commands/db/: mod.rs
src-tauri/src/commands/search/: retrieval.rs
src-tauri/src/core/: constants.rs  lang.rs  mod.rs
src-tauri/src/db/: hash.rs  indexing.rs  mod.rs  scheduler.rs  state.rs  time.rs  validation.rs
src-tauri/src/db/repos/: cards.rs  chunks.rs  files.rs  fragments.rs  meta.rs  mod.rs  notes.rs  review_logs.rs  schedules.rs  sections.rs  tags.rs
src-tauri/src/db/repos/fragments/: keyword.rs  mod.rs  vector.rs
src-tauri/src/db/schema/: helpers.rs  migrations.rs  mod.rs  tables.rs
src-tauri/src/db/schema/migrations/: v10_up.sql  v11_up.sql  v9_up.sql
src-tauri/src/domain/: card.rs  chunk.rs  distribute.rs  file.rs  fragment.rs  language.rs  mod.rs  note.rs  schedule.rs  search.rs  section.rs  tag.rs
src-tauri/src/entrypoints/: cli.rs  mod.rs
src-tauri/src/entrypoints/cli/: calibration.rs  distribute.rs  fragment_file.rs  import_dir.rs  query.rs  reindex.rs
src-tauri/src/entrypoints/tauri/: distribute.rs  reviewer.rs  search.rs
src-tauri/src/fragmenter/: config.rs  mod.rs  output.rs  pipeline.rs  token.rs  topic.rs  types.rs
src-tauri/src/fragmenter/clean/: apply.rs  latex.rs  markdown.rs  mod.rs  tables.rs  transforms.rs
src-tauri/src/fragmenter/markdown/: mod.rs  table.rs
src-tauri/src/fragmenter/pack/: char_budget.rs  mod.rs  passthrough.rs  tables.rs  token_budget.rs
src-tauri/src/fragmenter/segment/: block.rs  heading.rs  mod.rs  semantic.rs
src-tauri/src/fragmenter/stages/: assemble.rs  clean.rs  extract.rs  headings.rs  sections.rs  sub_headings.rs  table_restore.rs
src-tauri/src/indexer/: mod.rs  scheduler.rs
src-tauri/src/logging/: factory.rs  logger.rs  mod.rs  types.rs
src-tauri/src/logging/sinks/: console.rs  file.rs  memory.rs  mod.rs  noop.rs
src-tauri/src/refinery/: constants.rs  mod.rs  pipeline.rs  types.rs
src-tauri/src/refinery/stages/: atomization.rs  chunking.rs  consolidation.rs  deduplication.rs  enrichment.rs  fragmenting.rs  mod.rs  placement.rs  subsplit.rs  taxonomy.rs  write.rs
src-tauri/src/refinery/writers/: file.rs  file_writer.rs  mod.rs  transactional.rs
src-tauri/src/retrieval/: README.md  cache.rs  calibration.rs  config_resolver.rs  context.rs  fusion.rs  language.rs  mod.rs  pipeline.rs  types.rs
src-tauri/src/retrieval/config/: mod.rs  resolver.rs
src-tauri/src/retrieval/preprocess/: hyde.rs  mod.rs  synonyms.rs  translate.rs  variants.rs
src-tauri/src/retrieval/rerank/: listwise.rs  mod.rs
src-tauri/src/retrieval/rerankers/: listwise.rs  mod.rs  scoring.rs
src-tauri/src/retrieval/search/: executor.rs  fusion.rs  mod.rs  vault_lang.rs
src-tauri/src/retrieval/stages/: hyde.rs  mod.rs  synonyms.rs  translate_query.rs  translation.rs
src-tauri/src/retrieval/types/: config.rs  mod.rs  query.rs  result.rs
src-tauri/src/schema/: migrations.rs
src-tauri/src/services/: calibration.rs  distribute.rs  filesearch.rs  import.rs  indexer.rs  mod.rs  notesearch.rs  reindex.rs  reviewer.rs  scheduler.rs  search.rs  validation.rs
src-tauri/src/services/calibration/: dataset.rs  mod.rs  prefetch.rs
src-tauri/src/services/distribute/: analyze.rs  apply.rs  candidate_search.rs  chunker.rs  classifier.rs  heuristic.rs  mod.rs  parser.rs  refresh_cards.rs  retriever.rs  tests.rs
src-tauri/src/translation/: mod.rs
src-tauri/test_data/: large.md  medium.md  small.md
src-tauri/tests/: chunker.rs  db_integration.rs  embedder_integration.rs
src-tauri/tests/chunker/: extract.rs  formatting.rs  inbox.rs  latex.rs  main.rs  pipeline.rs  table.rs  token.rs  types.rs
src-tauri/tests/embedder/: mod.rs  test_embedder.rs
(+255 files in other folders)
