[package]
name = "scribo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scribo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# БД SQLite (bundled автоматически соберет SQLite под iOS/Android/Windows/Mac)
rusqlite = { version = "0.31.0", features = ["bundled"] } 

# Быстрый расчет диффов для истории заметок
diffy = "0.3" 

# Работа со временем
chrono = "0.4"
parking_lot = "0.12.5"
tauri-plugin-fs = "2.5.1"
base64 = "0.22.1"
thiserror = "2.0.18"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde_bytes = "0.11"
fsrs = "5.2.0"
