[package]
name = "scribo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scribo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# БД SQLite (bundled автоматически соберет SQLite под iOS/Android/Windows/Mac)
rusqlite = { version = "0.31.0", features = ["bundled"] } 

# Быстрый расчет диффов для истории заметок
diffy = "0.3" 

# Работа со временем
chrono = "0.4"
parking_lot = "0.12.5"
tauri-plugin-fs = "2.5.1"
base64 = "0.22.1"
thiserror = "2.0.18"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde_bytes = "0.11"
fsrs = "5.2.0"
bytemuck = "1.25.0"
dirs = "6.0.0"
pulldown-cmark = "0.13.4"
regex = "1.12.3"
walkdir = "2.5.0"
serde_yaml = "0.9.34"
pulldown-cmark-to-cmark = "22.0.0"
rayon = "1.12.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio = { version = "1.37", features = ["full"] }
sha2 = "0.10"
whatlang = "0.16"
fuzzy-matcher = "0.3"
log = "0.4.29"
env_logger = "0.11.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"

# Local AI dependencies
llama-cpp-2 = { version = "0.1", default-features = false }
notify = "6.1.1"
async-trait = "0.1.89"
lru = "0.18.0"
gguf = "0.1.2"
blake3 = "1.8.5"
[dev-dependencies]
proptest = "1.11.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "chunker_tests"
path = "tests/chunker/main.rs"

[[bench]]
name = "chunker_bench"
harness = false

[features]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]
