[package]
name = "scribo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scribo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri & Core Plugins
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.5.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
serde_bytes = "0.11"

# CLI & Configuration
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"

# Database Layer (rusqlite with bundled SQLite support across platforms)
rusqlite = { version = "0.31.0", features = ["bundled"] } 
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Markdown Parsing & AST Manipulation
pulldown-cmark = "0.13.4"
pulldown-cmark-to-cmark = "22.0.0"

# Spaced Repetition System (SRS)
fsrs = "5.2.0"

# Text Processing & Linguistics
whatlang = "0.16"
fuzzy-matcher = "0.3"
regex = "1.12.3"
stop-words = "0.8"
rust-stemmers = "1.2"

# Concurrency & Async Runtime
rayon = "1.12.0"
futures = "0.3"
tokio = { version = "1.37", features = ["full"] }
parking_lot = "0.12.5"

# Network & HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Cryptography & Hashing
sha2 = "0.10"
blake3 = "1.8.5"

# Utilities
diffy = "0.3" 
chrono = "0.4"
base64 = "0.22.1"
thiserror = "2.0.18"
bytemuck = "1.25.0"
walkdir = "2.5.0"
notify = "6.1.1"
async-trait = "0.1.89"
lru = "0.18.0"

# Logging & Diagnostic Infrastructure
log = "0.4.29"
env_logger = "0.11.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"

# Local AI & GGUF Integration
llama-cpp-2 = { version = "0.1", default-features = false }
gguf = "0.1.2"

[dev-dependencies]
proptest = "1.11.0"
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "chunker_bench"
harness = false

[features]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]
